--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ body {margin:0;height:2000px;}
     <div class = "item">
     <img typeof="foaf:Image" class="img-responsive" src="./content/home-banner-3-revised_0.png" width="1274" height="454" alt="" />    </div>
     <div class = "item">
-    <img typeof="foaf:Image" class="img-responsive" src="./content/logo.jpg" width="1274" height="454" alt="" />    </div>
+    <img typeof="foaf:Image" class="img-responsive" src="./content/logo1.png"  alt="" />    </div>
 </div>
   </div>
 
@@ -806,7 +806,7 @@ body {margin:0;height:2000px;}
     <li><a href="https://www.facebook.com/Pujya-Sindhi-Panchayat-Murlipura-100395811837160/" ><i class="fa fa-linkedin fa-2x">&nbsp;</i></a> </li>
     <li><a href="mailto:baba.meherdas.jaipur@outlook.com" ><i class="fa fa-google fa-2x">&nbsp;</i></a></li>
 	<li><a href="Contact Us.html"><i class="fa fa-twitter fa-2x">&nbsp;</i></a></li>
-</ul><p>For Online Services please do contact on<br><a href="tel:02423-258956">02423-258956</a>, <a href="tel:02423-258963">02423-258963</a>,</p>
+</ul><p>For Online Services please do contact on<br><a href="tel:+919414297309">+919414297309</a>, <a href="tel:+919414297309">+919414297309</a>,</p>
 
 </section>
   </div>
