new changes done Apk added

--- a/About us.html
+++ b/About us.html
@@ -158,7 +158,7 @@ body {margin:0;height:2000px;}
     <section id="block-block-13" class="block block-block clearfix">
 
       
-  <p class="download-app"><a href="https://www.sai.org.in/download-app-page"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
+  <p class="download-app"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
 
 </section>
 <div class="top-search-form-btn"></div><section id="block-search-form" class="block block-search clearfix">
@@ -317,12 +317,12 @@ body {margin:0;height:2000px;}
 
 
 <li data-id="685" data-level="2" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" class="tb-megamenu-item level-2 mega">
-  <a href="About%20us.html">
+  <a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
         Downloads          </a>
   </li>
 
 <li data-id="686" data-level="2" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" class="tb-megamenu-item level-2 mega">
-  <a href="About%20us.html">
+  <a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
         News          </a>
   </li>
 
@@ -409,7 +409,7 @@ body {margin:0;height:2000px;}
   </div>
 </div>
 </li>
-    <li class="mobile-download-link"><a href="https://shribabameherdasjaipur.github.io/download-app-page">
+    <li class="mobile-download-link"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
     <i class="fa fa-android">&nbsp;</i>
     <i class="fa fa-apple">&nbsp;</i> Download App</a></li>
 </ul>
@@ -465,6 +465,8 @@ body {margin:0;height:2000px;}
 <p>Shri Saibaba Sansthan Trust, Shirdi, is the Governing and Administrative body of the Shri Saibaba's Samadhi Temple and all others temples on this premise, and devoted towards development of Shirdi village.</p>
 
 <p>Shri Saibaba Sansthan Trust, Shirdi, is the authorized body to control and manage the day-to-day activities at the Shri Saibaba Samadhi Temple. It also provides various facilities like Accommodation, Meals (Free), refreshments, and lot more. The Sansthan Trust also runs School and Colleges(Junior and Senior),&nbsp; English Medium School from class Jr KG to Std X, Industrial Training Institute (ITI), Drinking Water Supply, Hospitals (Shri Saibaba Superspecility Hospital and Shri Sainath Hospital on Charity basis).</p>
+
+<iframe width="600" height="481" align='center' src="https://www.youtube.com/embed/B3DZuaD4l9E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p>Shirdi, a small rural town in the Rahata Taluka of Ahmednagar district in the Maharashtra state of India. Shirdi is a secular place where all religions are treated as one &amp; a belief in the power of Faith &amp; Patience is foremost. A place where all heads bow down in prayer, where faith prevails, where hopes are built, where patience pays, and where infinite joy and everlasting contentment abound. Such is the glory of the place which belongs to the Holy Saint, a true repository of wisdom, who pleased all with pious equality and gifted mankind ornaments of humanity and peace by saying "SABKA MALIK EK". The footprints of Saibaba have made this town a holy place. Millions of devotees continuously flock here from all over India and abroad. Situated on the Ahmednagar-Manmad highway.</p>
 
