--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {margin:0;height:2000px;}
 .icon-bar a {
   display: block;
   text-align: center;
-  padding: 16px;
+  padding: 10px;
   transition: all 0.3s ease;
   color: white;
   font-size: 20px;
@@ -167,7 +167,7 @@ body {margin:0;height:2000px;}
     <section id="block-block-13" class="block block-block clearfix">
 
       
-  <p class="download-app"><a href="https://shribabameherdasjaipur.github.io/download-app-page"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
+  <p class="download-app"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
 
 </section>
 <div class="top-search-form-btn"></div><section id="block-search-form" class="block block-search clearfix">
@@ -326,12 +326,12 @@ body {margin:0;height:2000px;}
 
 
 <li data-id="685" data-level="2" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" class="tb-megamenu-item level-2 mega">
-  <a href="About%20us.html">
+  <a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
         Downloads          </a>
   </li>
 
 <li data-id="686" data-level="2" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" class="tb-megamenu-item level-2 mega">
-  <a href="About%20us.html">
+  <a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
         News          </a>
   </li>
 
@@ -418,7 +418,7 @@ body {margin:0;height:2000px;}
   </div>
 </div>
 </li>
-    <li class="mobile-download-link"><a href="https://shribabameherdasjaipur.github.io/download-app-page">
+    <li class="mobile-download-link"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
     <i class="fa fa-android">&nbsp;</i>
     <i class="fa fa-apple">&nbsp;</i> Download App</a></li>
 </ul>
@@ -489,7 +489,7 @@ body {margin:0;height:2000px;}
 
 <p><a class="btn btn-outline about-link" href="./About us.html">More</a></p>
 
-<iframe width="881" height="481" src="https://www.youtube.com/embed/B3DZuaD4l9E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="600" height="481" src="https://www.youtube.com/embed/B3DZuaD4l9E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
   </div>
