--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ body {margin:0;height:2000px;}
 <a href='https://www.payumoney.com/paybypayumoney/#/A16F85E97369A1A3C651CB978884A2BD'><img
     src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/23.png' /></a>
 
-<a class="btn btn-outline btn-outline--red" href="https://www.payumoney.com/paybypayumoney/#/A16F85E97369A1A3C651CB978884A2BD" target="_blank">More</a></div>
+<a class="btn btn-outline btn-outline--red" href="donation1.html" target="_blank">More</a></div>
 
 </div>
 
