--- a/About us.html
+++ b/About us.html
@@ -158,13 +158,13 @@ body {margin:0;height:2000px;}
     <section id="block-block-13" class="block block-block clearfix">
 
       
-  <p class="download-app"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
+  <p class="download-app"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
 
 </section>
 <div class="top-search-form-btn"></div><section id="block-search-form" class="block block-search clearfix">
 
       
-  <form class="form-search content-search" action="https://www.sai.org.in/en/about-sansthan" method="post" id="search-block-form" accept-charset="UTF-8"><div><div>
+  <form class="form-search content-search" action="#" method="post" id="search-block-form" accept-charset="UTF-8"><div><div>
       <h2 class="element-invisible">Search form</h2>
     <div class="input-group"><input title="Enter the terms you wish to search for." placeholder="Search" class="form-control form-text" type="text" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128"><span class="input-group-btn"><button type="submit" class="btn btn-primary"><span class="icon glyphicon glyphicon-search" aria-hidden="true"></span></button></span></div><div class="form-actions form-wrapper form-group" id="edit-actions"><button class="element-invisible btn btn-primary form-submit" type="submit" id="edit-submit" name="op" value="Search">Search</button>
 </div><input type="hidden" name="form_build_id" value="form-brM-hlp6h7nwKUtX3-1EU40csMrxsloa4UoRzUTUZO8">
@@ -409,7 +409,7 @@ body {margin:0;height:2000px;}
   </div>
 </div>
 </li>
-    <li class="mobile-download-link"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
+    <li class="mobile-download-link"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing">
     <i class="fa fa-android">&nbsp;</i>
     <i class="fa fa-apple">&nbsp;</i> Download App</a></li>
 </ul>
@@ -471,7 +471,7 @@ body {margin:0;height:2000px;}
 
 <p><h5>Shri Saint Baba Meherdas Trust also  provides stationary items in School and Colleges(Junior and Senior),&nbsp; English Medium School from class Jr KG to Std X, Industrial Training Institute (ITI), Drinking Water Supply, Hospitals (Shri Saint baba Meherdas Superspecility Hospital and Shri Saint baba Meherdas Hospital on Charity basis).</h5></p>
 
-<iframe width="600" height="481" align='center' src="https://www.youtube.com/embed/B3DZuaD4l9E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <img alt="" class="img-responsive" src="./About us_files/not.jpg">
+<iframe width="600" height="481" align='center' src="https://www.youtube.com/embed/yZCqUeCwMDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <img alt="" class="img-responsive" src="./About us_files/not.jpg">
 
 </div>
 
@@ -536,6 +536,8 @@ body {margin:0;height:2000px;}
 <div class="lda-box lda-box--donation"><span class="lda-box__icon"><img alt="Donation" src="./About us_files/donation.svg"></span>
 
 <h3 class="lda-box__title">Donation</h3>
+<a href='https://www.payumoney.com/paybypayumoney/#/A16F85E97369A1A3C651CB978884A2BD'><img
+  src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/23.png' /></a>
 <a class="btn btn-outline btn-outline--red" href="donation1.html" target="_blank">More</a></div>
 </div>
 
