--- a/Contact Us.html
+++ b/Contact Us.html
@@ -247,13 +247,13 @@ body {margin:0;height:2000px;}
     <section id="block-block-13" class="block block-block clearfix">
 
       
-  <p class="download-app"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
+  <p class="download-app"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
 
 </section>
 <div class="top-search-form-btn"></div><section id="block-search-form" class="block block-search clearfix">
 
       
-  <form class="form-search content-search" action="https://www.sai.org.in/contact-us" method="post" id="search-block-form" accept-charset="UTF-8"><div><div>
+  <form class="form-search content-search" action="index.html" method="post" id="search-block-form" accept-charset="UTF-8"><div><div>
       <h2 class="element-invisible">Search form</h2>
     <div class="input-group"><input title="Enter the terms you wish to search for." placeholder="Search" class="form-control form-text" type="text" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128"><span class="input-group-btn"><button type="submit" class="btn btn-primary"><span class="icon glyphicon glyphicon-search" aria-hidden="true"></span></button></span></div><div class="form-actions form-wrapper form-group" id="edit-actions"><button class="element-invisible btn btn-primary form-submit" type="submit" id="edit-submit" name="op" value="Search">Search</button>
 </div><input type="hidden" name="form_build_id" value="form-dAlWT4Xn1do4iP6fAvGYAoDRAoRT0i-LfLSVZ8WXSTY">
@@ -498,7 +498,7 @@ body {margin:0;height:2000px;}
   </div>
 </div>
 </li>
-    <li class="mobile-download-link"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
+    <li class="mobile-download-link"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing">
     <i class="fa fa-android">&nbsp;</i>
     <i class="fa fa-apple">&nbsp;</i> Download App</a></li>
 </ul>
