--- a/donation1.html
+++ b/donation1.html
@@ -170,7 +170,7 @@ body {margin:0;height:2000px;}
     <section id="block-block-13" class="block block-block clearfix">
 
       
-  <p class="download-app"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
+  <p class="download-app"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
 
 </section>
 <div class="top-search-form-btn"></div><section id="block-search-form" class="block block-search clearfix">
@@ -420,8 +420,14 @@ body {margin:0;height:2000px;}
 </div>
   </div>
 </div>
+<li data-id="493" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" class="tb-megamenu-item level-1 mega dropdown">
+  <a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing" class="dropdown-toggle">
+    Download App          <span class="caret"></span>
+          </a>
+  </li>
+
 </li>
-    <li class="mobile-download-link"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
+    <li class="mobile-download-link"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing">
     <i class="fa fa-android">&nbsp;</i>
     <i class="fa fa-apple">&nbsp;</i> Download App</a></li>
 </ul>
@@ -507,7 +513,9 @@ body {margin:0;height:2000px;}
                                 src="./About us_files/donation.svg"></span>
 
                         <h3 class="lda-box__title">Donation</h3>
-                        <a class="btn btn-outline btn-outline--red" href="http://online.sai.org.in/"
+                        <a href='https://www.payumoney.com/paybypayumoney/#/A16F85E97369A1A3C651CB978884A2BD'><img
+                          src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/23.png' width="150"/></a>
+                        <a class="btn btn-outline btn-outline--red" href="https://www.payumoney.com/paybypayumoney/#/A16F85E97369A1A3C651CB978884A2BD"
                             target="_blank">More</a>
                     </div>
                 </div>
@@ -734,7 +742,7 @@ body {margin:0;height:2000px;}
                                 href="https://api.whatsapp.com/send?phone=+919414297309&amp;text=Hi, I contacted you Through your website."
                                 class="button mt-2 mr-2"> Contact on whatsapp </a>
                                 <br>
-                                Please Note that the Bank Account No. of every student is Unique and Different.</td>
+                                Please Note that the Bank Account No. .</td>
                             </tr>
                             <tr>
                               <td colspan="2"><b>Note for RTGS/NEFT/IMPS:</b>
@@ -824,9 +832,11 @@ body {margin:0;height:2000px;}
 
 <p><a class="btn btn-outline about-link" href="./About us.html">More</a></p>
 
-<iframe width="600" height="481" src="https://www.youtube.com/embed/B3DZuaD4l9E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="600" height="481" src="https://www.youtube.com/embed/yZCqUeCwMDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
+<h3 class="lda-box__title">For Donation</h3>
+<a href='https://www.payumoney.com/paybypayumoney/#/A16F85E97369A1A3C651CB978884A2BD'><img
+    src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/23.png' /></a>
 
 </section>
 </div>
