--- a/How To Reach.html
+++ b/How To Reach.html
@@ -161,7 +161,7 @@ body {margin:0;height:2000px;}
     <section id="block-block-13" class="block block-block clearfix">
 
       
-  <p class="download-app"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
+  <p class="download-app"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing"><i class="fa fa-android">&nbsp;</i><i class="fa fa-apple">&nbsp;</i> Download App</a></p>
 
 </section>
 <div class="top-search-form-btn"></div><section id="block-search-form" class="block block-search clearfix">
@@ -412,7 +412,7 @@ body {margin:0;height:2000px;}
   </div>
 </div>
 </li>
-    <li class="mobile-download-link"><a href="https://github.com/vaibhavhariaramani/mandir-app/raw/master/mandir%20app.apk">
+    <li class="mobile-download-link"><a href="https://drive.google.com/file/d/1J-FKXFKrhywc9MQ_8kuF-CQKMSFwz7WS/view?usp=sharing">
     <i class="fa fa-android">&nbsp;</i>
     <i class="fa fa-apple">&nbsp;</i> Download App</a></li>
 </ul>
